<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:background="#ffffff"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context=".LocateMeActivity">

    <TextView
        android:id="@+id/cell_guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cell_guess_s"/>

    <TextView
        android:id="@+id/act_guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_guess_s"/>

    <TextView
        android:id="@+id/misc_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_initial_belief"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_belief_s"/>

        <Button
            android:id="@+id/btn_locate_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locate_me_s"/>

        <Button
            android:id="@+id/btn_collect_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collect_data_s"/>
    </LinearLayout>


</LinearLayout>